--- a/uninew.html
+++ b/uninew.html
@@ -56,7 +56,7 @@ Licence URI: http://www.os-templates.com/template-terms
         </h2>
         <div id="ftr" style="opacity:0.8">
       <p><strong>  IGDTUnistash is an academic portal for the students of igdtuw having an aim to create an archive for all the requirements of  
-             students; those that are discovered during the four important years of college.Also we want to make the life of every student of IGDTUW simpler and make these 4 years a much smoother ride</strong></p>
+             students.<br> Those that are discovered during the four important years of college.Also we want to make the life of every student of IGDTUW simpler and make these 4 years a much smoother ride</strong></p>
       </div>
       <!-- ################################################################################################ -->
     </div>
@@ -91,7 +91,49 @@ Licence URI: http://www.os-templates.com/template-terms
         <!--<li><a class="faicon-vk" href="#"><i class="fa fa-vk"></i></a></li>-->
       </ul>
     </div>
-    
+
+    <div  class="one_third">
+      <style>
+       #map {
+        height: 400px;
+        width: 125%;
+       }
+    </style>
+  </head>
+  <body>
+    <h3>My Google Maps Demo</h3>
+    <div id="map"></div>
+    <script>
+      function initMap() {
+        var uluru = {lat: 28.665488, lng: 77.232471};
+        var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 4,
+          center: uluru
+        });
+        var marker = new google.maps.Marker({
+          position: uluru,
+          map: map
+        });
+      }
+    </script>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxbyRnegggEZqiwIoeePKzHf3iHP-Ebdg&callback=initMap">
+    </script>
+    </div>
+    <div class="one_third" style="padding-left:10%">
+      <h6 class="heading">Register Yourself For Updates</h6>
+      <p class="nospace btmspace-30"></p>
+      <form  name ="myform"method="post" action="/action_page_post.php" onsubmit="return validateForm();" method="post">
+        <fieldset>
+          <legend>Newsletter:</legend>
+          <input class="btmspace-15" type="text" value="" placeholder="Name">
+           <input class="btmspace-15" type="text" value="" placeholder="College">
+          <input class="btmspace-15" type="Email" value="" placeholder="Email">
+          <button type="submit" name="submit" value="submit" onsubmit= validate() >Submit</button>
+         
+        </fieldset>
+      </form>
+    </div> 
     <!-- ################################################################################################ -->
   </footer>
 </div>
@@ -101,7 +143,7 @@ Licence URI: http://www.os-templates.com/template-terms
 <div class="wrapper row5">
   <div id="copyright" class="hoc clear"> 
     <!-- ################################################################################################ -->
-    <p class="fl_left">Copyright &copy; 2017 - All Rights Reserved - <a href="#">UNistash</a></p>
+    <p class="fl_left">Copyright &copy; 2017 - All Rights Reserved - <a href="#">Domain Name</a></p>
    
     <!-- ################################################################################################ -->
   </div>
